--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="section">
         <div class="container">
 
-            <h1>The Gopher-Chang Network</h1>
+            <h1 class="title">The Gopher-Chang Network</h1>
 
             <img id="logo" src="/static/gcp-gopher.svg" width="100">
     <!-- [START html_template] -->
